src/test/deca/syntax/lexer/valid/created/include/include1.deca
// Description:
//    test de #include valid
//
// Resultats:
//    RAS


#include "print.decah"
