src/test/deca/syntax/lexer/invalid/created/include/fileNotFound/include2.deca
// Description:
//    tests de programme lexicalement correct.
//    wrong #include
//
// Resultats:
//    include2.deca:9:33: FichierInexistant.deca: include file not found


#include "FichierInexistant.deca"